--- a/app/src/main/res/layout/fragment_me_.xml
+++ b/app/src/main/res/layout/fragment_me_.xml
@@ -236,7 +236,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="15dp">
+                            android:layout_marginTop="15dp"
+                            android:background="@drawable/round_rect_gray">
                             <ImageView
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
@@ -249,7 +250,8 @@
                                 android:text="0 Drafts"
                                 android:layout_marginLeft="10dp"
                                 android:layout_gravity="center_vertical"
-                                android:textColor="@color/textcolorblackalpha"/>
+                                android:textColor="@color/textcolorblackalpha"
+                                />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -292,7 +294,7 @@
                     android:orientation="horizontal"
                     android:layout_marginTop="5dp"
                     android:weightSum="2"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                    <LinearLayout
                        android:id="@+id/layout_yourvideos"
@@ -345,13 +347,13 @@
                     android:layout_height="1dp"
                     android:background="#1A000000"
                     android:layout_marginTop="5dp"
-                    android:visibility="gone"></View>
+                    android:visibility="visible"></View>
 
                 <android.support.v7.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/recyclerview_videos"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:focusableInTouchMode="true"
                     android:focusable="true"
                     />
