--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -287,13 +287,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:weightSum="2"
             android:paddingTop="10dp"
             >
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 >
@@ -311,7 +311,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:layout_marginRight="50dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -338,7 +339,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:layout_marginRight="50dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -363,33 +365,19 @@
                 </LinearLayout>
             </LinearLayout>
             <RelativeLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
-                android:visibility="gone">
+                android:visibility="visible">
 
-                <TextView
-                    android:id="@+id/tv_hashtag2"
-                    android:layout_width="wrap_content"
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text=" #hashtag2 "
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textSize="12sp"
-                    android:layout_marginRight="10dp"/>
+                    android:id="@+id/rv_hashtagslist">
 
-                <TextView
-                    android:id="@+id/tv_hashtag1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/tv_hashtag2"
-                    android:text=" #hashtag1 "
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textSize="12sp"
-                    android:layout_marginRight="10dp"/>
+                </android.support.v7.widget.RecyclerView>
 
             </RelativeLayout>
 
