--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -132,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
-                android:visibility="visible">
+                android:visibility="gone">
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -155,7 +155,7 @@
                 android:layout_height="1dp"
                 android:background="#1A000000"
                 android:layout_marginTop="5dp"
-                android:visibility="visible">
+                android:visibility="gone">
             </View>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -269,7 +269,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible">
+                android:visibility="gone">
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -318,13 +318,13 @@
                 android:layout_height="1dp"
                 android:background="#1A000000"
                 android:layout_marginTop="5dp"
-                android:visibility="visible">
+                android:visibility="gone">
             </View>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible">
+                android:visibility="gone">
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -373,13 +373,13 @@
                 android:layout_height="1dp"
                 android:background="#1A000000"
                 android:layout_marginTop="5dp"
-                android:visibility="visible">
+                android:visibility="gone">
             </View>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible">
+                android:visibility="gone">
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -428,7 +428,7 @@
                 android:layout_height="1dp"
                 android:background="#1A000000"
                 android:layout_marginTop="5dp"
-                android:visibility="visible">
+                android:visibility="gone">
             </View>
 
             <RelativeLayout
