--- a/app/src/main/res/layout/activity_hashtag_searchresults.xml
+++ b/app/src/main/res/layout/activity_hashtag_searchresults.xml
@@ -90,6 +90,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="9.1m views"
+                        android:visibility="gone"
                         android:layout_marginTop="5dp"
                         android:textAppearance="?android:attr/textAppearanceSmall"/>
                     <RelativeLayout
@@ -108,7 +109,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_toRightOf="@+id/iv_videos"
-                            android:text="10"
+                            android:text="0"
                             android:layout_centerVertical="true"
                             />
                     </RelativeLayout>
