--- a/app/src/main/res/layout/activity_sounds_searchresults.xml
+++ b/app/src/main/res/layout/activity_sounds_searchresults.xml
@@ -92,6 +92,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:text="Krishna"
+                            android:visibility="gone"
                             android:textAppearance="?android:attr/textAppearanceSmall"/>
                         <RelativeLayout
                             android:id="@+id/videos_count"
@@ -104,14 +105,15 @@
                                 android:layout_width="26dp"
                                 android:layout_height="20dp"
                                 android:src="@mipmap/videos" />
+
                             <TextView
                                 android:id="@+id/tv_videoscount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
+                                android:layout_marginBottom="1dp"
                                 android:layout_toRightOf="@+id/iv_videos"
-                                android:text="10"
-                                android:layout_centerVertical="true"
-                                />
+                                android:text="0" />
                         </RelativeLayout>
                     </LinearLayout>
 
@@ -125,7 +127,7 @@
                             android:id="@+id/iv_favourite"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@mipmap/fav_n_g"
                             android:layout_margin="5dp"
                             android:layout_centerVertical="true"/>
                         <TextView
