--- a/app/src/main/res/layout/activity_select_sounds.xml
+++ b/app/src/main/res/layout/activity_select_sounds.xml
@@ -1,9 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.SelectSoundsActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/layout_titlebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
+        <LinearLayout
+            android:id="@+id/layout_toolbaricons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_favourite"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@mipmap/add_favwhite"
+                android:padding="10dp"/>
+            <ImageView
+                android:id="@+id/iv_mysounds"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@mipmap/add_friends"
+                android:padding="10dp"/>
+            <ImageView
+                android:id="@+id/iv_close"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@mipmap/close_transparent"
+                android:padding="10dp"/>
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/layout_toolbaricons"
+            android:layout_centerVertical="true">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add a Sound"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                />
+        </RelativeLayout>
+    </RelativeLayout>
+    
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout_titlebar"
+        android:layout_marginTop="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:id="@+id/rv_soundgroups"
+           app:layout_behavior="@string/appbar_scrolling_view_behavior"
+           />
+
+       <RelativeLayout
+           android:id="@+id/layout_search"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginLeft="10dp"
+           android:layout_marginRight="10dp"
+           android:background="#f5f5f4">
+
+           <ImageView
+               android:id="@+id/iv_searchicon"
+               android:layout_width="20dp"
+               android:layout_height="20dp"
+               android:src="@mipmap/search_gray"
+               android:layout_alignParentRight="true"
+               android:layout_margin="15dp"
+               android:layout_centerVertical="true"/>
+
+           <TextView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_toLeftOf="@+id/iv_searchicon"
+               android:text="Search for users,sounds,hashtags...."
+               android:layout_marginLeft="10dp"
+               android:layout_marginRight="10dp"
+               android:layout_centerVertical="true"
+               android:textAppearance="?android:attr/textAppearanceSmall"/>
+       </RelativeLayout>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:elevation="2dp"
+                app:cardUseCompatPadding="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:id="@+id/layout_playlistcontainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Playlist Category"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_margin="5dp"
+                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                    <RelativeLayout
+                        android:id="@+id/layout_viewall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/circlecornersrect_grey"
+                        android:layout_margin="5dp">
+
+                        <TextView
+                            android:id="@+id/tv_viewall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" View All "
+                            android:textColor="@android:color/black"
+                            />
+
+                        <ImageView
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/tv_viewall"
+                            android:src="@mipmap/right_arrow_black"/>
+                    </RelativeLayout>
+
+                </RelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_below="@+id/layout_playlistcontainer"
+                    android:id="@+id/rv_playlistcategory"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:id="@+id/rv_songslistcontainer"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+</RelativeLayout>
